20170922 commit Add: 1.Login UI 2.Register UI

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,10 +20,7 @@
         </activity>
         <activity android:name=".LaunchPage" />
         <activity android:name=".Login" />
-        <activity
-            android:name=".Register"
-            android:label="@string/title_activity_register"
-            android:theme="@style/AppTheme" />
+        <activity android:name=".Register"/>
         <!--
         <activity
             android:name="com.journeyapps.barcodescanner.CaptureActivity"
