--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,5 +31,8 @@ dependencies {
     compile 'com.android.support:percent:25.3.1'
     compile 'com.android.support:design:25.3.1'
     compile 'com.journeyapps:zxing-android-embedded:3.5.0'
+    compile 'com.facebook.android:facebook-android-sdk:[4,5)'
+    compile 'com.squareup.picasso:picasso:2.5.2'
+    compile 'de.hdodenhof:circleimageview:2.1.0'
     testCompile 'junit:junit:4.12'
 }
