--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     package="com.example.f1285.hoteltest">
 
-    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:allowBackup="true"
@@ -12,8 +12,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-
-        <meta-data android:name="com.facebook.sdk.ApplicationId" android:value="@string/facebook_app_id"/>
+        <meta-data
+            android:name="com.facebook.sdk.ApplicationId"
+            android:value="@string/facebook_app_id" />
 
         <activity android:name=".Home" />
         <activity android:name=".LoadingSplash">
@@ -25,16 +26,21 @@
         </activity>
         <activity android:name=".LaunchPage" />
         <activity android:name=".Login" />
-        <activity android:name=".Register"/>
+        <activity android:name=".Register" />
         <!--
         <activity
             android:name="com.journeyapps.barcodescanner.CaptureActivity"
             android:screenOrientation="portrait"
-            tools:replace="screenOrientation" />-->
+            tools:replace="screenOrientation" />
+        -->
         <activity
             android:name=".CustomCaptureActivity"
             android:screenOrientation="portrait"
-            tools:replace="screenOrientation"/>
+            tools:replace="screenOrientation" />
+        <activity
+            android:name=".Booking"
+            android:label="@string/title_activity_booking"
+            android:theme="@style/AppTheme"></activity>
     </application>
 
 </manifest>
